--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
     <!-- Chapter 1: Cover -->
     <section id="cover">
         <div class="cover-content fade-in">
-            <h1>Jane Doe</h1>
+            <h1>Yosemite Sam</h1>
             <p>Creative Front-End Developer</p>
             <p class="tagline">I code beautifully simple things, and I love what I do.</p>
             <div class="cover-buttons">
