--- a/index.html
+++ b/index.html
@@ -173,7 +173,7 @@
         #cover {
             min-height: 100vh;
             background: linear-gradient(rgba(0, 102, 204, 0.8), rgba(39, 174, 96, 0.8)), 
-                        url('https://images.unsplash.com/photo-1581578731548-c64695cc6952?ixlib=rb-4.0.3&auto=format&fit=crop&w=2000&q=80');
+                        url('https://unsplash.com/photos/a-man-sweeps-a-walkway-with-vibrant-flowers-1BeWGTjTC0w');
             background-size: cover;
             background-position: center;
             color: var(--text-light);
