--- a/index.html
+++ b/index.html
@@ -723,7 +723,7 @@
     <!-- Navigation -->
     <nav class="navbar">
         <div class="nav-container">
-            <a href="#cover" class="logo">PixelPerfect</a>
+            <a href="#cover" class="logo">HIRE ME PLEASE</a>
             <div class="hamburger" id="hamburger">
                 <i class="fas fa-bars"></i>
             </div>
