--- a/index.html
+++ b/index.html
@@ -762,7 +762,7 @@
     <section id="about">
         <h2>About Me</h2>
         <div class="about-container">
-            <img src="https://unsplash.com/photos/boy-in-orange-jacket-sitting-on-black-shopping-cart-G7MLvqp9-lg=rb-4.0.3&auto=format&fit=crop&w=600&q=80">
+            <img src="https://images.unsplash.com/photo-1560250097-0b93528c311a?ixlib=rb-4.0.3&auto=format&fit=crop&w=600&q=80" alt="Alex Morgan - Photo Editor" class="about-image">
             <div class="about-text">
                 <h3>Creative Vision Meets Technical Precision</h3>
                 <p>With over 7 years of experience in professional photo editing, I specialize in transforming ordinary images into extraordinary visual stories. My expertise spans portrait retouching, commercial product editing, creative composites, and color grading.</p>
